changed link color and fixed some layout issues

--- a/about_me/about_me.css
+++ b/about_me/about_me.css
@@ -13,7 +13,11 @@ body {
 }
 
 a {
-    color: black;
+    color: #1a1b8a;
+}
+
+a:hover {
+    background-color: gray;
 }
 
 
