--- a/about_site/about_site.css
+++ b/about_site/about_site.css
@@ -3,7 +3,7 @@ body {
     padding: 0;
 }
 
-.main-text {
+.container {
     width: 560px;
 }
 
