--- a/colophon/colophon.css
+++ b/colophon/colophon.css
@@ -16,7 +16,11 @@ body {
 }
 
 a {
-    color: black;
+    color: #1a1b8a;
+}
+
+a:hover {
+    background-color: gray;
 }
 
 @media only screen and (max-width: 1050px) {
