--- a/elsewhere/elsewhere.css
+++ b/elsewhere/elsewhere.css
@@ -4,5 +4,9 @@ body {
 }
 
 a {
-    color: black;
+    color: #1a1b8a;
+}
+
+a:hover {
+    background-color: gray;
 }
