--- a/index.css
+++ b/index.css
@@ -20,7 +20,11 @@ body {
 
 a {
   text-decoration: underline;
-  color: black;
+  color: #1a1b8a;
+}
+
+a:hover {
+  background-color: gray;
 }
 
 #last-updated {
